# tlm

./: .gitignore  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  tlm-guestlogin.pam  tlm-login.debian  tlm-login.pam  tlm-system-login  tlm.conf.in  tlm.service
data/debian/: tlm-default-login  tlm-login
data/multi-seat/etc/: tlm.conf
data/multi-seat/etc/session.d/: app-session  user-session.ivi
data/tizen-ivi/etc/: tlm-multiseat.conf  tlm-vtc1010.conf
data/tizen-ivi/etc/session.d/: genivi-session-multiseat  genivi-session-singleseat  genivi-session-vtc1010  user-session  user-session.modello
data/yocto/: tlm-default-login  tlm-login  tlm.service
data/yocto/etc/: tlm.conf
data/yocto/etc/session.d/: user-session  user-session-launch-script
dists/debian/: changelog  control  install  rules
dists/rpm/: tlm-suse.spec
dists/rpm/tizen/packaging/: tlm.changes  tlm.spec
docs/: Makefile.am  introduction.xml  tlm-docs.sgml
examples/: Makefile.am  tlm-ui.c
src/: Makefile.am  tlm-account-plugin.c  tlm-account-plugin.h  tlm-auth-plugin.c  tlm-auth-plugin.h  tlm-auth-session.c  tlm-auth-session.h  tlm-config-general.h  tlm-config.c  tlm-config.h  tlm-enum.h.template  tlm-log.c  tlm-log.h  tlm-main.c  tlm-manager.c  tlm-manager.h  tlm-plugin.c  tlm-plugin.h  tlm-seat.c  tlm-seat.h  tlm-session.c  tlm-session.h  tlm-utils.c  tlm-utils.h
src/client/: Makefile.am  tlm-client.c
src/common/: Makefile.am  tlm-account-plugin.c  tlm-auth-plugin.c  tlm-config-general.h  tlm-config-seat.h  tlm-config.c  tlm-config.h  tlm-error.c  tlm-error.h  tlm-log.c  tlm-utils.c  tlm-utils.h
src/common/dbus/: Makefile.am  tlm-dbus-server-p2p.c  tlm-dbus-server-p2p.h  tlm-dbus-utils.c  tlm-dbus-utils.h  tlm-dbus.h
src/common/dbus/interfaces/: org.O1.Tlm.Launcher.xml  org.O1.Tlm.Login.xml  org.O1.Tlm.Session.xml  org.tizen.Tlm.Login.xml
src/daemon/: Makefile.am  tlm-auth-session.c  tlm-auth-session.h  tlm-config-general.h  tlm-config.c  tlm-config.h  tlm-dbus-observer.c  tlm-dbus-observer.h  tlm-enum.c.template  tlm-enum.h.template  tlm-main.c  tlm-manager.c  tlm-manager.h  tlm-seat.c  tlm-seat.h  tlm-session-remote.c  tlm-session-remote.h  tlm-session.c  tlm-session.h  tlm-utils.c  tlm-utils.h
src/daemon/dbus/: Makefile.am  tlm-dbus-login-adapter.c  tlm-dbus-login-adapter.h  tlm-dbus-server-interface.c  tlm-dbus-server-p2p.c  tlm-dbus-server-p2p.h
src/launcher/: Makefile.am  tlm-dbus-launcher-observer.c  tlm-dbus-launcher-observer.h  tlm-launcher.c  tlm-process-manager.c  tlm-process-manager.h
src/launcher/dbus/: Makefile.am  tlm-dbus-launcher-adapter.c  tlm-dbus-launcher-adapter.h
src/plugins/: Makefile.am
src/plugins/default/: Makefile.am  tlm-account-plugin-default.c  tlm-account-plugin-default.h  tlm-auth-plugin-default.c  tlm-plugin-default.c  tlm-plugin-default.h
src/plugins/gumd/: Makefile.am  tlm-plugin-gumd.c  tlm-plugin-gumd.h
src/plugins/nfc/: Makefile.am  tlm-auth-plugin-nfc.c
src/sessiond/: main.c  tlm-auth-session.c  tlm-session-daemon.c  tlm-session.c  tlm-session.h
src/utils/: Makefile.am  tlm-client.c  tlm-launcher.c  tlm-seatconf.c
tests/: Makefile.am  config.c
tests/config/: Makefile.am
tests/daemon/: Makefile.am  daemon-test.c
tools/: prepare-tizen.sh
